[tool.poetry]
name = "unicorn"
version = "0.1.0"
description = "My Web Framework"
authors = ["VanikSarajyan <vaniksarajyan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
